# ChangeLog for xfce-base/xfce4
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Aug 2008; Christoph Mende <angelos@gentoo.org> xfce4-9999.ebuild:
  Removed libxfce4mcs dependency

  30 Jun 2008; Christoph Mende <angelos@gentoo.org> xfce4-9999.ebuild:
  Added xfce4-settings

  02 Dec 2007; Christoph Mende <angelos@gentoo.org> xfce4-9999.ebuild:
  Sync dependencies with the main tree

  18 Aug 2007; Christoph Mende <angelos@gentoo.org> xfce4-9999.ebuild:
  Moved xfce4-appfinder dependency to !minimal

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
