@@ -1,13 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD xfce4-9999.ebuild 1315 RMD160 cb7f1ce2f74074b6cf06fe8e9d20d9d4ece87399 SHA1 132780f0b558c06b0a1df03793845836ef488cfb SHA256 e755b6b35658dabd2a3ac8f26ec4432439e7a51ce3a6af9111d13c6195228d95
-MISC ChangeLog 630 RMD160 eaa159c56d5c0fb011daa5a54dd01ef6aba6e76b SHA1 4a4004e7861e0b8cac45789c6147ab6810526f74 SHA256 83bc62119b26d63b1ab5e2b922a991f6be987cb31581c976560b605e597e997e
+EBUILD xfce4-4.5.92.ebuild 1447 RMD160 7f2f1b947c1669e9ceb206a91dae3dd3f0e6cfc6 SHA1 bb4b0910f0c6f54b9867050315b6ad3c1a15baa8 SHA256 ad15a8d4bdc65e9b1acd74e3c79e26bfbf35bb8f7e16e6bc5299dc3f5ceec4f1
+EBUILD xfce4-9999.ebuild 1519 RMD160 9079b5ac70eb7b6314de4ce79991aa8b6790f8ea SHA1 f9d566ad8dbf9cc3ac7da196b46867f98e3ff431 SHA256 1f63b1b5e83d683749adadbacf1e58d3b1c3f001dae8509df9f59f50eed00344
+MISC ChangeLog 778 RMD160 7ed37e3760723fe20e7cd5eeee81d3fde360966b SHA1 c7ad025cd30acda0a92137a175ad694649f4a9c8 SHA256 43a44523794caf3b9092d89de772338041632a9f8408bda2ceede52113e9d5b3
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkWJFIACgkQKhnDs22gwa9L/ACeIX3h6Wru00GSP4tkQOBEiSy0
-SvQAoM/Fk0ap3P26Yb+M7/AnnQj26rjW
-=tlKA
+iEYEARECAAYFAkkdtk4ACgkQKhnDs22gwa+ozACg1m67x/agsLdVUfo7zlVKlSS+
+0QAAoPuHDHetzH1w+4IKLrmksmGHCNpb
+=qtdp
 -----END PGP SIGNATURE-----
